--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -183,6 +183,7 @@ UPROGS=\
 	_zombie\
 	_my_userapp\
 	_test\
+    _test_yield\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -252,7 +253,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
-	printf.c umalloc.c my_userapp.c test.c\
+	printf.c umalloc.c my_userapp.c test.c test_yield.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
