--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -22,12 +22,15 @@ OBJS = \
 	syscall.o\
 	sysfile.o\
 	sysproc.o\
+  syslwp.o\
 	trapasm.o\
 	trap.o\
 	uart.o\
 	vectors.o\
 	vm.o\
 	prac_syscall.o\
+  lwp.o\
+
 # Cross-compiling (e.g., on Mac OS X)
 # TOOLPREFIX = i386-jos-elf
 
@@ -185,6 +188,8 @@ UPROGS=\
 	_test\
   _test_yield\
   _test_scheduler\
+  _test_thread\
+  _test_thread2\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -254,7 +259,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c test_shceduler.c\
-	printf.c umalloc.c my_userapp.c test.c test_yield.c\
+	printf.c umalloc.c my_userapp.c test.c test_yield.c test_thread.c test_thread2.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
