racing test, basic test pass

--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -30,6 +30,7 @@ OBJS = \
 	vm.o\
 	prac_syscall.o\
   lwp.o\
+#  lwp_swtch.o\
 
 # Cross-compiling (e.g., on Mac OS X)
 # TOOLPREFIX = i386-jos-elf
