--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -195,6 +195,7 @@ UPROGS=\
   _test_thread\
   _test_thread2\
   _test_rwlock\
+  _test_largefile\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
