--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -196,6 +196,7 @@ UPROGS=\
   _test_thread2\
   _test_rwlock\
   _test_largefile\
+  _test_prw\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -266,7 +267,7 @@ EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c test_shceduler.c\
 	printf.c umalloc.c my_userapp.c test.c test_yield.c test_thread.c test_thread2.c\
-  test_rwlock.c\
+  test_rwlock.c test_prw.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
